# AntiJudol

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Makefile  README.md  docker-compose.yml  eslint.config.js  package.json
client/wsProtocol/: bagibagi.js  saweria.js
data/: blocklist.js
public/: index.html  validate.html
scripts/: build-homoglyphs.js
services/filter/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/filter/app/: main.py
services/filter/app/api/: router.py
services/filter/app/api/v1/: classify.py
services/filter/app/config/: logging_config.py  settings.py
services/filter/app/core/services/: model_service.py
services/filter/app/utils/: response_formatter.py
services/filter/model/: .gitignore  README.md
services/filter/tests/: conftest.py  test_classify.py  test_health.py  test_settings.py
services/proxy/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  package.json
src/: config.js  constants.js  platforms.js  server.js
src/antibot/: impersonate.js  index.js
src/filter/: homoglyphs.js  index.js  judolFilter.js  normalizeText.js  typoMatcher.js  wordlist.js
src/routes/: index.js
src/utils/: cfStrip.js  donationLog.js  feedbackLog.js  helpers.js  killSwitch.js  logger.js  platformMiddleware.js  rateLimit.js
tests/: cfStrip.test.js  check.integration.test.js  helpers.test.js  judolFilter.test.js  normalizeText.test.js  overlayRewrites.test.js  rateLimit.test.js  typoMatcher.test.js
tests/client/: wsProtocol.test.js
(+48 files in other folders)
